refactoring: reduce extra code